--- a/Config/Atlas/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Atlas/TEST/WALKING_SIM_TEST.yaml
@@ -1,7 +1,8 @@
 test_configuration:
 
     #body_height: 0.85
-    body_height: 0.80
+    #body_height: 0.80
+    body_height: 0.82
 
     swing_time: 0.33
     st_transition_time: 0.03
@@ -16,29 +17,29 @@ test_configuration:
     walking_start_time: 5
     walking_velocity_lb: [0, 0]
     walking_velocity_ub: [0, 0]
-    turning_rate_lb: 0.
-    turning_rate_ub: 0.
+    turning_rate_lb: -0.05
+    turning_rate_ub: 0.05
 
 control_configuration:
     body_ctrl:
 
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500]
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300 ]
         kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
               15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
-              15, 15, 15]
+              15, 15, 15 ]
 
     single_contact_trans_ctrl:
         max_rf_z: 1800
         min_rf_z: 5
 
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500]
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300 ]
         kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
               15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
-              15, 15, 15]
+              15, 15, 15 ]
 
     left_body_foot_planning_ctrl:
         planner_name: velocity_reversal_lipm
@@ -46,12 +47,12 @@ control_configuration:
         push_down_height: 0.03
         default_target_foot_location: [0.0, 0.2, 0.0]
 
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500]
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300 ]
         kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
               15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
-              15, 15, 15]
+              15, 15, 15 ]
 
         body_pt_offset: [0.0, 0.0]
         foot_landing_offset: [0.0, 0.0]
@@ -62,12 +63,12 @@ control_configuration:
         push_down_height: 0.03
         default_target_foot_location: [0.0, -0.2, 0.0]
 
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500]
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300 ]
         kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
               15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
-              15, 15, 15]
+              15, 15, 15 ]
 
         body_pt_offset: [0.0, 0.0]
         foot_landing_offset: [0., 0.]
