--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -2,8 +2,8 @@
 #test_name: body_test
 #test_name: balancing_test
 #test_name: walking_test
-#test_name: rl_walking_test
-test_name: turning_test
+test_name: rl_walking_test
+#test_name: turning_test
 
 jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
 jpos_max: [0.6  , 0.4  , 0.5   , 1.9   , 2.33 , 0.6  , 0.4  , 0.5   , 1.9   , 2.33]
