--- a/Config/Draco/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/RL_WALKING_TEST.yaml
@@ -3,8 +3,10 @@ test_configuration:
 
     initial_jpos: [0., -0.1, -0.9, 1.7, 0.71, 0., 0.08, -0.9, 1.7, 0.71]
 
-    body_height: 0.98
-    com_height_for_omega: 1.0
+    body_height: 0.93
+    com_height_for_omega: 0.93
+    #body_height: 1.0
+    #com_height_for_omega: 1.0
 
     jpos_initialization_time: 0.15
     com_lifting_time: 0.15
@@ -23,8 +25,10 @@ test_configuration:
     #contact_switch_check: false
 
     walking_start_time: 5
-    walking_velocity_lb: [-0.1, -0.1]
-    walking_velocity_ub: [0.1, 0.1]
+    #walking_velocity_lb: [-0.1, -0.1]
+    #walking_velocity_ub: [0.1, 0.1]
+    walking_velocity_lb: [0.1, 0.]
+    walking_velocity_ub: [0.1, 0.]
 
     protocol:
         ip_control_pc: "localhost"
@@ -78,7 +82,7 @@ control_configuration:
 
     single_contact_trans_ctrl:
         max_rf_z: 550
-        min_rf_z: 0
+        min_rf_z: 5
 
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
@@ -133,14 +137,14 @@ control_configuration:
 
     right_body_foot_policy_ctrl:
         planner_name: velocity_reversal_lipm
-        swing_height: 0.17
-        push_down_height: 0.0
-        default_target_foot_location: [0.0, -0.15, 0.0]
+        swing_height: 0.15
+        push_down_height: 0.01
+        default_target_foot_location: [0.0, -0.20, 0.0]
 
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [0.0, 0.0]
+        body_pt_offset: [0.12, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -156,14 +160,14 @@ control_configuration:
 
     left_body_foot_policy_ctrl:
         planner_name: velocity_reversal_lipm
-        swing_height: 0.17
-        push_down_height: 0.0
-        default_target_foot_location: [0.0, 0.15, 0.0]
+        swing_height: 0.15
+        push_down_height: 0.01
+        default_target_foot_location: [0.0, 0.20, 0.0]
 
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [0.0, 0.0]
+        body_pt_offset: [0.12, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -180,8 +184,8 @@ control_configuration:
 planner_configuration:
 
     velocity_reversal_pln:
-        x_step_length_limit: [-0.6, 0.6]
-        y_step_length_limit: [0.20, 0.70]
+        x_step_length_limit: [-0.7, 0.7]
+        y_step_length_limit: [0.18, 0.95]
         com_velocity_limit: [0.0, 1.3]
-        t_prime: [0.20 , 0.22]
-        kappa: [-0.20, -0.20]
+        t_prime: [0.22 , 0.22]
+        kappa: [-0.18, -0.18]
