--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -15,10 +15,10 @@ print_computation_time: false
 release_time: 0.5
 
 ### Toggle for RL ###
-show_viewer: true
-#show_viewer: false
-check_collision: true
-#check_collision: false
+#show_viewer: true
+show_viewer: false
+#check_collision: true
+check_collision: false
 
 
 control_configuration:
