--- a/Config/Draco/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/RL_WALKING_TEST.yaml
@@ -42,11 +42,10 @@ test_configuration:
     # Observation \in R^{11}
     # [ com_x, com_y, com_z,
     #   com_roll, com_pitch, com_yaw,
-    #   com_vx, com_vy, com_vz,
-    #   target_x, target_y]
+    #   com_vx, com_vy, com_vz ]
     # ==========================================================================
-    obs_lower_bound: [-100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100.]
-    obs_upper_bound: [100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.]
+    obs_lower_bound: [-100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100.]
+    obs_upper_bound: [100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.]
 
     # ==========================================================================
     # Action \in R^{2}
@@ -59,8 +58,8 @@ test_configuration:
     # ======================================================================
     # Terminate condition
     # ======================================================================
-    terminate_obs_lower_bound: [-0.35 , -0.35 , -0.1 , -0.51 , -0.51 , -0.51 , -0.6 , -0.6 , -0.5 , -100. , -100.]
-    terminate_obs_upper_bound: [0.35  , 0.35  , 0.1  , 0.51  , 0.51  , 0.51  , 0.6  , 0.6  , 0.5  , 100.  , 100.]
+    terminate_obs_lower_bound: [-0.35 , -0.35 , -0.1 , -0.51 , -0.51 , -0.51 , -0.6 , -0.6 , -0.5]
+    terminate_obs_upper_bound: [0.35  , 0.35  , 0.1  , 0.51  , 0.51  , 0.51  , 0.6  , 0.6  , 0.5]
 
 control_configuration:
 
