tighten the observation

--- a/Config/Atlas/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Atlas/TEST/RL_WALKING_TEST.yaml
@@ -28,13 +28,13 @@ test_configuration:
         exit_cmd: "pkill -f 'atlas"
 
     # ==========================================================================
-    # Observation \in R^{9}
+    # Observation \in R^{10}
     # [ com_x, com_y, com_z,
-    #   com_roll, com_pitch, com_yaw,
+    #   com_roll, com_pitch, com_yaw, des_yaw-com_yaw,
     #   com_vx, com_vy, com_vz]
     # ==========================================================================
-    obs_lower_bound: [-100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100.]
-    obs_upper_bound: [100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.]
+    obs_lower_bound: [-100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100.]
+    obs_upper_bound: [100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.]
 
     # ==========================================================================
     # Action \in R^{2}
@@ -42,13 +42,13 @@ test_configuration:
     # ==========================================================================
     action_lower_bound: [-1, -1]
     action_upper_bound: [1, 1]
-    action_scale: [0.15, 0.15]
+    action_scale: [0.1, 0.1]
 
     # ======================================================================
     # Terminate condition
     # ======================================================================
-    terminate_obs_lower_bound: [-0.35 , -0.35 , -0.1 , -0.51 , -0.51 , -0.51 , -0.6 , -0.6 , -0.5]
-    terminate_obs_upper_bound: [0.35  , 0.35  , 0.1  , 0.51  , 0.51  , 0.51  , 0.6  , 0.6  , 0.5 ]
+    terminate_obs_lower_bound: [-0.3 , -0.35 , -0.03 , -0.2 , -0.2 , -0.2 , -0.2 , -0.3 , -0.3 , -0.3]
+    terminate_obs_upper_bound: [0.3  , 0.35  , 0.1   , 0.2  , 0.2  , 3.24 , 0.2  , 0.3  , 0.3  , 0.3 ]
 
 control_configuration:
     body_ctrl:
