--- a/PnC/AtlasPnC/CMakeLists.txt
+++ b/PnC/AtlasPnC/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE sources "*.cpp")
 file(GLOB_RECURSE headers "*.hpp")
 
-add_library(AtlasPnC ${sources})
+add_library(AtlasPnC SHARED ${sources})
 target_link_libraries(AtlasPnC ${DART_LIBRARIES}
                                 myRobotSystem
                                 myUtils
