--- a/Config/FixedAtlas/TEST/JOINT_TEST.yaml
+++ b/Config/FixedAtlas/TEST/JOINT_TEST.yaml
@@ -1,9 +1,9 @@
 test_configuration:
     target_duration: 10.
-    joint_target_pos: [ 1, 0, 0, 0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0]
+    joint_target_pos: [ 1,0 , 0, 0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0,0, 0, 0]
 
     swing_duration: 100.
-    amplitude : [ 0.5 , 0 , 0 , 0 , 0 , 0, 0 , 0 , 0  , 0 , 0, 0 , 0 , 0  , 0 , 0, 0 , 0 , 0  , 0  , 0, 0 , 0 , 0  , 0  , 0 , 0 , 0  , 0  , 0 ]
+    amplitude : [ 0.5 , 0, 0 , 0 , 0 , 0, 0 , 0 , 0  , 0 , 0, 0 , 0 , 0  , 0 , 0, 0 , 0 , 0  , 0  , 0, 0 , 0 , 0  , 0  , 0 , 0 , 0  , 0  , 0 ]
     frequency : [ 0.5 ,0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0, 0,0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0, 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0 , 0, 0]
     phase     : [ 0,0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0, 0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0  , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0 ]
 
@@ -11,9 +11,9 @@ test_configuration:
 
 control_configuration:
     joint_position_ctrl:
-        kp: [100 , 100 , 100 , 100 ,  100 , 100 , 100 , 100 , 100 , 100 , 100 , 100 ,  100 , 100 , 100 , 100 ,100 , 100 , 100 , 100 ,  100 , 100 , 100 , 100 ,100,100,100,100,100 ]
-        kd: [3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,3,3,3,3,3]
+        kp: [70 , 70 , 70 , 70 ,  70 , 70 , 70 , 70 , 70 , 70 , 70 , 70 ,  70 , 70 , 70 , 70 ,70 , 70 , 70 , 70 ,  70 , 70 , 70 , 70 ,70,70,70,70,70 ]
+        kd: [7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,7,7,7,7,7]
 
     joint_swing_ctrl:
-        kp: [100 , 100 , 100 , 100 ,  100 , 100 , 100 , 100 , 100 , 100 , 100 , 100 ,  100 , 100 , 100 , 100 ,100 , 100 , 100 , 100 ,  100 , 100 , 100 , 100 ,100,100,100,100,100 ]
-        kd: [3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,3   , 3   , 3   , 3   ,  3   , 3   , 3   , 3   ,3,3,3,3,3]
+        kp: [70 , 70 , 70 , 70 ,  70 , 70 , 70 , 70 , 70 , 70 , 70 , 70 ,  70 , 70 , 70 , 70 ,70 , 70 , 70 , 70 ,  70 , 70 , 70 , 70 ,70,70,70,70,70 ]
+        kd: [7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,7   , 7   , 7   , 7   ,  7   , 7   , 7   , 7   ,7,7,7,7,7]
