CMakelist parse error fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ if(Protobuf_FOUND)
 endif()
 
 # Pybind11
-set(USE_PYBIND11 True)
+set(USE_PYBIND11 False)
 if(USE_PYBIND11)
   message("-- Enable Pybind11")
   find_package(PythonAnaconda)
