check protobuf & zmq for rl dep

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ add_subdirectory(Simulator)
 add_subdirectory(Utils)
 add_subdirectory(ExternalSource)
 add_subdirectory(PnC)
-if(Protobuf_FOUND)
+if(Protobuf_FOUND AND ZMQ_FOUND)
     add_subdirectory(Messages)
 endif()
 if(USE_PYBIND11)
