--- a/Config/Draco/LOW_LEVEL_CONFIG.yaml
+++ b/Config/Draco/LOW_LEVEL_CONFIG.yaml
@@ -1,13 +1,24 @@
+#service_call:
+    #jp_kp             : [50  , 95   , 95   , 90   , 5   , 50  , 95   , 95   , 90   , 5]
+    #jp_kd             : [5   , 8    , 8    , 5    , 0.5 , 5   , 8    , 8    , 5    , 0.5]
+    #t_kp              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #t_kd              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #en_auto_kd        : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #en_dob            : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
+    #rotor_inertia     : [20. , 120. , 120. , 510. , 20. , 20. , 120. , 120. , 510. , 20.]
+    #temperature_limit : [110 , 110  , 110  , 110  , 110 , 110 , 110  , 110  , 110  , 350]
+    #current_limit     : [8   , 20   , 19   , 22   , 3   , 8   , 20   , 19   , 22   , 2]
+
 service_call:
-    jp_kp             : [50  , 95   , 95   , 90   , 5   , 50  , 95   , 95   , 90   , 5]
-    jp_kd             : [5   , 8    , 8    , 5    , 0.5 , 5   , 8    , 8    , 5    , 0.5]
-    t_kp              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
-    t_kd              : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
-    en_auto_kd        : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
-    en_dob            : [0   , 0    , 0    , 0    , 0   , 0   , 0    , 0    , 0    , 0]
-    rotor_inertia     : [20. , 120. , 120. , 510. , 20. , 20. , 120. , 120. , 510. , 20.]
-    temperature_limit : [110 , 110  , 110  , 110  , 110 , 110 , 110  , 110  , 110  , 350]
-    current_limit     : [8   , 20   , 19   , 22   , 3   , 8   , 20   , 19   , 22   , 2]
+    jp_kp             : [30  ,30   ,30   ,30   ,5   ,30  ,30   ,30   ,30   ,5]
+    jp_kd             : [2   ,2    ,2    ,2    ,0.5 ,2   ,2    ,2    ,2    ,0.5]
+    t_kp              : [0   ,0    ,0    ,0    ,0   ,0   ,0    ,0    ,0    ,0]
+    t_kd              : [0   ,0    ,0    ,0    ,0   ,0   ,0    ,0    ,0    ,0]
+    en_auto_kd        : [0   ,0    ,0    ,0    ,0   ,0   ,0    ,0    ,0    ,0]
+    en_dob            : [0   ,0    ,0    ,0    ,0   ,0   ,0    ,0    ,0    ,0]
+    rotor_inertia     : [20. ,120. ,120. ,510. ,20. ,20. ,120. ,120. ,510. ,20.]
+    temperature_limit : [110 ,110  ,110  ,110  ,110 ,110 ,110  ,110  ,110  ,350]
+    current_limit     : [2   ,2    ,2    ,2    ,2   ,2   ,2    ,2    ,2    ,2]
 
 safety_turn_off:
     min_position    : [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
@@ -15,3 +26,4 @@ safety_turn_off:
     max_velocity    : [10.  , 10.  , 10.   , 10.   , 20.  , 10.  , 10.  , 10.   , 10.   , 20.]
     max_trq         : [200. , 200. , 200.  , 200. , 200. , 200. , 200. , 200.  , 200. , 200.]
     max_temperature : [100. , 100. , 100.  , 100.  , 100. , 100. , 100. , 100.  , 100.  , 350.]
+
