--- a/Simulator/Dart/CMakeLists.txt
+++ b/Simulator/Dart/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(Draco)
 add_subdirectory(Atlas)
 add_subdirectory(FixedAtlas)
 add_subdirectory(CartPole)
+add_subdirectory(Scorpio)
