--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,9 +1,9 @@
-#test_name: joint_test
+test_name: joint_test
 #test_name: body_test
-test_name: walking_test
+#test_name: walking_test
 
 #test_name: balancing_test
-#test_name: rl_walking_test
+#1test_name: rl_walking_test
 #test_name: turning_test
 
 jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
