--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -8,20 +8,19 @@ display_target_frame: true
 joint_limit_enforced: true
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 
-calculate_zmp: true
-plot_adjusted_foot: true
-plot_guided_foot: true
+calculate_zmp: false
+plot_adjusted_foot: false
+plot_guided_foot: false
 camera_manipulator: true
 print_computation_time: false
 #release_time: 4.20
 release_time: 0.5
 
 ### Toggle for RL ###
-#show_viewer: true
-show_viewer: false
+show_viewer: true
+#show_viewer: false
 #check_collision: true
 check_collision: false
-
 
 control_configuration:
   kp: [100 , 100 , 100 , 100 , 10 , 100 , 100 , 100 , 100 , 10]
