--- a/Config/Atlas/SIMULATION.yaml
+++ b/Config/Atlas/SIMULATION.yaml
@@ -7,9 +7,12 @@ initial_configuration:
 #show_viewer: true
 show_viewer: false
 show_joint_frame: false
-show_target_frame: true
-plot_guided_foot: true
-plot_adjusted_foot: true
+#show_target_frame: true
+#plot_guided_foot: true
+#plot_adjusted_foot: true
+show_target_frame: false
+plot_guided_foot: false
+plot_adjusted_foot: false
 camera_manipulator: false
 
 control_configuration:
