--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -5,7 +5,7 @@ test_configuration:
     ssp_duration: 0.8
     tr_duration: 0.05
 
-    com_height: 0.85
+    com_height: 1.0
     footstep_length: [0.3, 0.0]
 
 planner_configuration:
@@ -90,3 +90,39 @@ control_configuration:
         kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
               15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
               15, 15, 15, 15, 15, 15, 15, 15 ]
+    rs_start_trns_ctrl:
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300 ]
+        kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15 ]
+        max_rf_z: 1500
+        min_rf_z: 5
+    rs_end_trns_ctrl:
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300 ]
+        kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15 ]
+        max_rf_z: 1500
+        min_rf_z: 5
+    ls_start_trns_ctrl:
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300 ]
+        kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15 ]
+        max_rf_z: 1500
+        min_rf_z: 5
+    ls_end_trns_ctrl:
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300 ]
+        kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15 ]
+        max_rf_z: 1500
+        min_rf_z: 5
