ctrl initialization part fixed

--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -93,6 +93,7 @@ control_configuration:
         kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
               30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
               30, 30, 30, 30, 30, 30, 30, 30 ]
+
     rs_start_trns_ctrl:
         kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
               500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
@@ -129,3 +130,18 @@ control_configuration:
               30, 30, 30, 30, 30, 30, 30, 30 ]
         max_rf_z: 1500
         min_rf_z: 5
+
+    r_ss_ctrl:
+        kp: [ 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
+              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
+              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
+    l_ss_ctrl:
+        kp: [ 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
+              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
+              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
