--- a/Config/Valkyrie/SIMULATION.yaml
+++ b/Config/Valkyrie/SIMULATION.yaml
@@ -1,7 +1,7 @@
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 show_joint_frame: false
-plot_mpc_result: true
-#plot_mpc_result: false
+#plot_mpc_result: true
+plot_mpc_result: false
 
 control_configuration:
   kp: 300
