before valkyrie balancing

--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -5,9 +5,10 @@ test_configuration:
     ssp_duration: 0.8
     trns_duration: 0.05
 
-    com_height: 1.0
+    com_height: 0.9
     footstep_width: 0.26
-    footstep_length: 0.3
+    #footstep_length: 0.3
+    footstep_length: 0.1
 
     replan: false
 
@@ -102,7 +103,7 @@ control_configuration:
               30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
               30, 30, 30, 30, 30, 30, 30, 30 ]
         max_rf_z: 1500
-        min_rf_z: 5
+        min_rf_z: 10
     rs_end_trns_ctrl:
         kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
               500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
@@ -111,7 +112,7 @@ control_configuration:
               30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
               30, 30, 30, 30, 30, 30, 30, 30 ]
         max_rf_z: 1500
-        min_rf_z: 5
+        min_rf_z: 10
     ls_start_trns_ctrl:
         kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
               500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
@@ -120,7 +121,7 @@ control_configuration:
               30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
               30, 30, 30, 30, 30, 30, 30, 30 ]
         max_rf_z: 1500
-        min_rf_z: 5
+        min_rf_z: 10
     ls_end_trns_ctrl:
         kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
               500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
@@ -129,19 +130,19 @@ control_configuration:
               30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
               30, 30, 30, 30, 30, 30, 30, 30 ]
         max_rf_z: 1500
-        min_rf_z: 5
+        min_rf_z: 10
 
     r_ss_ctrl:
-        kp: [ 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
-              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
-              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
+              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
+              500, 500, 500, 500, 500, 500, 500, 500 ]
+        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
+              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
+              30, 30, 30, 30, 30, 30, 30, 30 ]
     l_ss_ctrl:
-        kp: [ 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
-              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500,
-              1500, 1500, 1500, 1500, 1500, 1500, 1500, 1500 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
+              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
+              500, 500, 500, 500, 500, 500, 500, 500 ]
+        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
+              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
+              30, 30, 30, 30, 30, 30, 30, 30 ]
