atlas com task done

--- a/Config/Atlas/TEST/BALANCE_TEST.yaml
+++ b/Config/Atlas/TEST/BALANCE_TEST.yaml
@@ -1,10 +1,14 @@
 test_configuration:
-    target_com: [0, 0, 0.82]
+    target_com: [0, 0, 0.90]
 control_configuration:
     balance_ctrl:
-        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
-              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
-              300, 300, 300 ]
-        kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
-              15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
-              15, 15, 15 ]
+        kp: [ 400, 400, 400, 400, 400, 400, 400, 400, 400, 400,
+              400, 400, 400, 400, 400, 400, 400, 400, 400, 400,
+              400, 400, 400 ]
+        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
+              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
+              30, 30, 30 ]
+        amplitude: 0.01
+        frequency: 0.3
+        target_time: 0.1
+        target_com_height: 1.1
