debugging traj and controller

--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -7,8 +7,8 @@ test_configuration:
 
     com_height: 0.9
     footstep_width: 0.26
-    #footstep_length: 0.3
     footstep_length: 0.1
+    swing_height: 0.15
 
     replan: false
 
@@ -77,7 +77,7 @@ planner_configuration:
         # Storage information #
         #######################
 
-        store_data: True
+        store_data: False
         storage_path: ExperimentData/WPG_TEST_PLANNING_RESULT.yaml
 
         ##################
@@ -88,61 +88,65 @@ planner_configuration:
 
 control_configuration:
     ds_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
 
     rs_start_trns_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
-        max_rf_z: 1500
-        min_rf_z: 10
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
+        max_rf_z: 1800
+        min_rf_z: 5
+
     rs_end_trns_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
-        max_rf_z: 1500
-        min_rf_z: 10
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
+        max_rf_z: 1800
+        min_rf_z: 5
+
     ls_start_trns_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
-        max_rf_z: 1500
-        min_rf_z: 10
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
+        max_rf_z: 1800
+        min_rf_z: 5
+
     ls_end_trns_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
-        max_rf_z: 1500
-        min_rf_z: 10
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
+        max_rf_z: 1800
+        min_rf_z: 5
 
     r_ss_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
     l_ss_ctrl:
-        kp: [ 500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500, 500, 500,
-              500, 500, 500, 500, 500, 500, 500, 500 ]
-        kd: [ 30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30, 30, 30,
-              30, 30, 30, 30, 30, 30, 30, 30 ]
+        kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
+              700, 700, 700, 700, 700, 700, 700, 700 ]
+        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
+              50, 50, 50, 50, 50, 50, 50, 50 ]
+
