Valkyrie Swing Ctrl added

--- a/Config/Valkyrie/TEST/BALANCE_TEST.yaml
+++ b/Config/Valkyrie/TEST/BALANCE_TEST.yaml
@@ -1,7 +1,22 @@
 test_configuration:
-    target_com: [0, 0, 0.82]
+    #target_com: [0, 0, 0.82]
+    target_pos_duration: 1.
+    com_pos_deviation: [0,0,-0.3]
+
+    #swing_duration: 30.
+    amplitude: [0,0,0]
+    frequency: [0,0,0]
+    phase: [0,0,0]
+
 control_configuration:
     balance_ctrl:
+        kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
+              300, 300, 300, 300, 300, 300, 300, 300 ]
+        kd: [ 15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15, 15, 15,
+              15, 15, 15, 15, 15, 15, 15, 15 ]
+    swing_ctrl:
         kp: [ 300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
               300, 300, 300, 300, 300, 300, 300, 300, 300, 300,
               300, 300, 300, 300, 300, 300, 300, 300 ]
