change tvr planner name and tree structures

--- a/PnC/PlannerSet/CMakeLists.txt
+++ b/PnC/PlannerSet/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE sources "*.cpp")
 file(GLOB centroid_planner_headers "CentroidPlanner/*.hpp")
-file(GLOB pipm_foot_planner_headers "PIPM_FootPlacementPlanner/*.hpp")
+file(GLOB pipm_foot_planner_headers "LIPMPlanner/*.hpp")
 
 add_library(myPlanner SHARED ${sources}
                              ${centroid_planner_headers}
@@ -14,4 +14,4 @@ install(TARGETS myPlanner DESTINATION "${INSTALL_LIB_DIR}")
 install(FILES ${centroid_planner_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/CentroidPlanner")
 install(FILES ${pipm_foot_planner_headers} DESTINATION
-    "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/PIPM_FootPlacementPlanner")
+    "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/LIPMPlanner")
