--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -3,11 +3,12 @@ test_configuration:
     dsp_duration: 0.4
     fin_dsp_duration: 0.3
     ssp_duration: 0.8
-    trns_duration: 0.05
+    trns_duration: 0.03
 
     com_height: 0.9
-    footstep_width: 0.26
-    footstep_length: 0.1
+    walking_distance: 0.9
+    footstep_width: 0.274
+    footstep_length: 0.15
     swing_height: 0.15
 
     replan: false
@@ -42,15 +43,15 @@ planner_configuration:
         friction_coeff: 0.7
         friction_cone: LinearCone  # Types: LinearCone, SocCone #
         torque_range: [-200.0, 200.0]
-        eef_offset_rf: [ 0.00,  0.00,  0.00]
-        eef_offset_lf: [ 0.00,  0.00,  0.00]
+        eef_offset_rf: [ 0.0189,  0.00,  0.00]
+        eef_offset_lf: [ 0.0189,  0.00,  0.00]
         eef_offset_rh: [ 0.20,  0.00,  0.48]
         eef_offset_lh: [-0.20,  0.00,  0.48]
         cop_range_rf: [-0.135, 0.135, -0.08, 0.08]
         cop_range_lf: [-0.135, 0.135, -0.08, 0.08]
         cop_range_rh: [-0.03,  0.03, -0.03,  0.03]
         cop_range_lh: [-0.03,  0.03, -0.03,  0.03]
-        max_eef_lengths: [1.5,  1.5,  0.60,  0.60]
+        max_eef_lengths: [1.4,  1.4,  0.60,  0.60]
 
         ####################
         # Dynamics weights #
@@ -59,7 +60,7 @@ planner_configuration:
         w_trq_arm:       1.000
         w_trq_leg:       1.000
         w_com:           [ 10000,  10000,  10000]
-        w_amom:          [ 35.500,  35.500,  35.500]
+        w_amom:          [ 0.500,  0.500,  0.500]
         w_lmom:          [ 0.010,  0.001,  0.001]
         w_amomd:         [ 0.100,  0.400,  0.100]
         w_lmomd:         [ 0.015,  0.015,  0.015]
@@ -91,17 +92,19 @@ control_configuration:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70 ]
+
 
     rs_start_trns_ctrl:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70 ]
+
         max_rf_z: 1800
         min_rf_z: 5
 
@@ -109,9 +112,10 @@ control_configuration:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70 ]
+
         max_rf_z: 1800
         min_rf_z: 5
 
@@ -119,9 +123,10 @@ control_configuration:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70 ]
+
         max_rf_z: 1800
         min_rf_z: 5
 
@@ -129,9 +134,10 @@ control_configuration:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70 ]
+
         max_rf_z: 1800
         min_rf_z: 5
 
@@ -146,7 +152,7 @@ control_configuration:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700 ]
-        kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
-              50, 50, 50, 50, 50, 50, 50, 50 ]
+        kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
+              70, 70, 70, 70, 70, 70, 70, 70 ]
 
