--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -1,15 +1,27 @@
 test_configuration:
-    ini_dsp_duration: 0.6
-    dsp_duration: 0.4
-    fin_dsp_duration: 0.3
-    ssp_duration: 0.8
+    #ini_dsp_duration: 0.6
+    #dsp_duration: 0.4
+    #fin_dsp_duration: 0.3
+    #ssp_duration: 0.8
+    #trns_duration: 0.03
+
+    #com_height: 0.95
+    #walking_distance: 0.89
+    #footstep_width: 0.274
+    #footstep_length: 0.20
+    #swing_height: 0.15
+
+    ini_dsp_duration: 1.0
+    dsp_duration: 0.5
+    fin_dsp_duration: 0.5
+    ssp_duration: 0.3
     trns_duration: 0.03
 
-    com_height: 0.9
-    walking_distance: 0.09
-    footstep_width: 0.274
-    footstep_length: 0.02
-    swing_height: 0.15
+    com_height: 0.95
+    walking_distance: 0.89
+    footstep_width: 0.22
+    footstep_length: 0.13
+    swing_height: 0.11
 
     replan: false
 
@@ -42,7 +54,7 @@ planner_configuration:
 
         friction_coeff: 0.7
         friction_cone: LinearCone  # Types: LinearCone, SocCone #
-        torque_range: [-200.0, 200.0]
+        torque_range: [-100.0, 100.0]
         eef_offset_rf: [ 0.0189,  0.00,  0.00]
         eef_offset_lf: [ 0.0189,  0.00,  0.00]
         eef_offset_rh: [ 0.20,  0.00,  0.48]
@@ -51,7 +63,7 @@ planner_configuration:
         cop_range_lf: [-0.135, 0.135, -0.08, 0.08]
         cop_range_rh: [-0.03,  0.03, -0.03,  0.03]
         cop_range_lh: [-0.03,  0.03, -0.03,  0.03]
-        max_eef_lengths: [1.4,  1.4,  0.60,  0.60]
+        max_eef_lengths: [1.1,  1.1,  0.60,  0.60]
 
         ####################
         # Dynamics weights #
@@ -61,7 +73,7 @@ planner_configuration:
         w_trq_leg:       1.000
         w_com:           [ 10000,  10000,  10000]
         w_amom:          [ 0.500,  0.500,  0.500]
-        w_lmom:          [ 0.010,  0.001,  0.001]
+        w_lmom:          [ 0.010,  0.005,  0.001]
         w_amomd:         [ 0.100,  0.400,  0.100]
         w_lmomd:         [ 0.015,  0.015,  0.015]
         w_amom_final:    [ 10.00,  10.00,  10.00]
@@ -95,6 +107,8 @@ control_configuration:
         kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
 
 
     rs_start_trns_ctrl:
@@ -104,6 +118,8 @@ control_configuration:
         kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
 
         max_rf_z: 1500
         min_rf_z: 10
@@ -115,6 +131,8 @@ control_configuration:
         kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
 
         max_rf_z: 1500
         min_rf_z: 10
@@ -126,6 +144,8 @@ control_configuration:
         kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
 
         max_rf_z: 1500
         min_rf_z: 10
@@ -137,6 +157,8 @@ control_configuration:
         kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
 
         max_rf_z: 1500
         min_rf_z: 10
@@ -148,6 +170,11 @@ control_configuration:
         kd: [ 50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
               50, 50, 50, 50, 50, 50, 50, 50, 50, 50,
               50, 50, 50, 50, 50, 50, 50, 50 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+        foot_pos_kp: [150., 150., 150.]
+        foot_pos_kd: [10., 10., 10.]
+
     l_ss_ctrl:
         kp: [ 700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
               700, 700, 700, 700, 700, 700, 700, 700, 700, 700,
@@ -155,4 +182,8 @@ control_configuration:
         kd: [ 70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70, 70, 70,
               70, 70, 70, 70, 70, 70, 70, 70 ]
+        com_kp: [5000., 15000., 5000.]
+        com_kd: [500., 1500., 500.]
+        foot_pos_kp: [150., 150., 150.]
+        foot_pos_kd: [10., 10., 10.]
 
