--- a/Config/Valkyrie/TEST/WALKING_TEST.yaml
+++ b/Config/Valkyrie/TEST/WALKING_TEST.yaml
@@ -11,18 +11,24 @@ test_configuration:
     #footstep_length: 0.20
     #swing_height: 0.15
 
-    ini_dsp_duration: 1.0
+
+    #com_height: 0.95
+    #walking_distance: 0.89
+    #footstep_width: 0.22
+    #footstep_length: 0.13
+    #swing_height: 0.11
+
+    ini_dsp_duration: 0.8
     dsp_duration: 0.6
-    fin_dsp_duration: 0.5
+    fin_dsp_duration: 0.6
     ssp_duration: 0.3
     trns_duration: 0.03
 
     com_height: 0.95
-    walking_distance: 0.89
+    walking_distance: 1.3
     footstep_width: 0.22
     footstep_length: 0.13
     swing_height: 0.11
-
     replan: false
 
 planner_configuration:
