--- a/Config/Valkyrie/SIMULATION.yaml
+++ b/Config/Valkyrie/SIMULATION.yaml
@@ -1,8 +1,8 @@
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 is_record: false
 show_joint_frame: false
-#plot_mpc_result: true
-plot_mpc_result: false
+plot_mpc_result: true
+#plot_mpc_result: false
 
 control_configuration:
   kp: 500
